Agregación de la Página de Servicios

--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
         <title>
-            Web
+            Inicio
         </title>
     </head>
 
@@ -107,7 +107,7 @@
                         <li class="itemsDiferencias"> 
                             Calidad - Precio 
                         </li>
-                    </ul><img class="imagenDiferencias" src="imagenes/diferenciales.jpg">
+                    </ul><img class="imagenDiferencias" src="imagenes/diferenciales.jpg" alt="IMAGEN DIFERENCIAS">
                 </div>
             </section>
                 
@@ -125,7 +125,7 @@
         </main>
 
         <footer class="pie">
-            <img src="imagenes/logo-blanco.png">
+            <img src="imagenes/logo-blanco.png" alt="LOGO BARBERÍA">
             <p class="copy">
                 &copy Copyright Executioner Style
             </p>
